# mapreduce

./: .gitignore  LICENSE  README.md  pyproject.toml
mapreduce/contar_palabras/: reducer.py
mapreduce/temperatura_max_min/: mapper.py  obtain_result_from_reducer.py  reducer.py
mapreduce/temperatura_max_min/files/2017/: CRND0103-2017-WA_Quinault_4_NE.txt
mapreduce/temperatura_max_min/salida_2017/: part-00000  part-00001
mapreduce/webclient_logs/: mapper.py  reducer.py
mapreduce/webclient_logs/files/condensed/272/Apr95/: con1.cs21.797704525  con10.cs17.797311896  con10.cs17.797795658  con10.cs18.798763244  con10.cs19.798341861  con10.cs20.796849749  con10.cs20.797278720  con10.cs20.797551045  con10.cs20.798405758  con10.cs20.798415538  con10.cs20.798566729  con10.cs20.798767731  con10.cs20.798772731  con10.cs20.798823645  con10.cs21.799191275  con10.cs21.799197635  con11.cs17.797629427  con11.cs17.798247004  con11.cs18.799012144  con11.cs19.797880545  con14.cs19.798822382  con14.cs19.798835431  con14.cs19.799001057  con17.cs17.797038075  con17.cs17.797042679  con17.cs17.798857608  con17.cs19.797382535  con17.cs19.797383133  con17.cs19.798323755  con19.cs17.797528774  con19.cs19.797883864  con19.cs21.797101170  con19.cs21.797101296  con19.cs21.797101922  con19.cs21.797628568  con19.cs21.797630749  con19.cs21.797706783  con19.cs21.797712820  con19.cs21.797712920  (+95 more)
mapreduce/webclient_logs/salida_Feb95/: part-00000
mapreduce/wine_quality/: mapper.py  reducer.py
mapreduce/wine_quality/salida_files/: part-00000
mapreduce/wine_quality/salida_wines/: part-00000
(+9250 files in other folders)
