[tool.poetry]
name = "mapreduce"
version = "0.1.0"
description = "ICS map-reduce practice"
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
